--- a/src/app/pruebas-c/pruebas-c.component.html
+++ b/src/app/pruebas-c/pruebas-c.component.html
@@ -1,2 +1,7 @@
 <link rel="stylesheet" href="./porcentaje.component.scss">
 <div class="barra"></div>
+
+
+
+<div class="btn_commit otro"><button class="btn btn_class"></button>
+</div> 
