--- a/src/app/pruebas-c/pruebas-c.component.html
+++ b/src/app/pruebas-c/pruebas-c.component.html
@@ -3,5 +3,5 @@
 
 
 
-<div class="btn_commit otro"><button class="btn btn_class"></button>
+<div class="btn_commit otro"><button class="btn btn_class">este es el 2</button>
 </div> 
